--- a/lamborghini/index.html
+++ b/lamborghini/index.html
@@ -34,7 +34,7 @@ ital,wght@0,300;0,400;0,700;1,400&display=swap"
             </li>
           </ul>
           <a href="#" class="logo">
-            <img class="logo-img" src="images/logo1.png" alt="logo" />
+            <img class="logo-img" src="images/Logo1.png" alt="logo" />
           </a>
           <ul class="menu-list menu-right">
             <li class="menu-item">
